--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* BEGIN Login */
 .login{
     margin : 0px auto;
     width: 18rem;
@@ -17,3 +18,74 @@
     font-size: 0.9rem;
     text-align: center;
 }
+/* END Login */
+
+/* BEGIN Navbar */
+.navbar .search-bar {
+    width: 100%;
+    padding: 0px 17px;
+}
+
+.navbar .navbar-nav .nav-item{
+    white-space: nowrap;
+}
+
+.navbar .navbar-nav .highlighted{
+    background-color: orange;
+    border-radius: .25rem;
+    font-weight: bold;
+}
+
+.navbar .navbar-nav .highlighted a{
+    color: white;
+}
+/* END Navbar */
+
+/* BEGIN Container*/
+.container {
+    margin-top: 60px;
+}
+/* END Container */
+
+/* BEGIN Question Card*/
+.question .vote {
+    font-size: 30px;
+}
+
+.question .left{
+    text-align: center;
+}
+
+.question .left p{
+    margin-bottom: 0.3rem;
+}
+
+.question .right .card-title a {
+    color: black;
+}
+
+.question .right .card-title a:hover {
+    color: orange;
+}
+
+.question .vote .vote-button:hover{
+    color:orange;
+    cursor: pointer;
+}
+/* END Question Card */
+
+/* BEGIN Answer Card*/
+.answer.questioning{
+    background-color: #e0e0e0;
+}
+.answer .left{
+    text-align: center;
+}
+.answer .left img {
+    width: 100%;
+}
+
+.answer .left a{
+    font-size: 0.8rem;
+}
+/* END Answer Card */
