--- a/template/discussion/discussion.html
+++ b/template/discussion/discussion.html
@@ -74,7 +74,7 @@
                     <div class="form-group">
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                    <button type="button" class="btn ml-auto">Dark</button>
+                    <button type="button" class="btn ml-auto answer">Answer</button>
                 </p>
             </div>
         </div>
