--- a/src/website/layout/authentication.html
+++ b/src/website/layout/authentication.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../../assets/css/fontawesome.all.css"/>
 </head>
 <body>
-    {{template "content"}}
+    {{template "content" .}}
 </body>
 </html>
