--- a/src/website/layout/main.html
+++ b/src/website/layout/main.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
 
-    {{template "content"}}
+    {{template "content" .}}
 
     <script src="/assets/js/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
     <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
