Bugfix and update discussion
- Fix datatype problem when saving answers (stored as int instead of date time)
- Add solved question button
- Count answers on question listing
- Show solved / not solved flag on question listing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,22 @@
     font-size: 0.8rem;
 }
 
+.answer .left .btn-good-answer {
+    background: none;
+    border: 0px;
+    cursor: pointer;
+}
+
+.answer .left .good-answer {
+    background: green;
+    padding: 2px 0px;
+}
+
+.answer .left .btn-good-answer.selected {
+    color: white;
+    cursor: default;
+}
+
 /* END Answer Card */
 
 /* BEGIN Discussion*/
