--- a/src/website/layout/main.html
+++ b/src/website/layout/main.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar taken from https://getbootstrap.com/docs/4.0/examples/navbars/ (modified)-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Circle</a>
+        <a class="navbar-brand" href="/">Circle</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,13 +25,13 @@
             </form>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item highlighted">
-                    <a class="nav-link" href="#">Ask Question</a>
+                    <a class="nav-link" href="/ask">Ask Question</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="/profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
